src/App.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    background-color: rgba(0, 0, 0, 0.9);
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    font-family: sans-serif;
}

.container {
    width: 380px;
    min-height: 200px;
    border-radius: 16px;
    overflow: hidden;
    user-select: none;
}

.top-container {
    width: 100%;
    padding: 1rem 2rem;
    /* background-color: black; */
    background-color: #111;
    height: 100px;
    color: rgba(255, 255, 255, 0.7);
    display: flex;
    justify-content: end;
    align-items: center;
    font-size: 4rem;
}

.bottom-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(5, 60px);
    row-gap: 16px;
    column-gap: 8px;
    padding: 16px;
    background-color: #222;
}

.box {
    font-size: 2rem;
    color: rgba(255, 255, 255, 0.5);
    background-color: #111;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    user-select: none;
    cursor: pointer;
}

@media (min-height: 600px) {
    .box:hover {
        background-color: rgba(236,126,35, 0.4);;
    }
}

.operator-box {
    color: rgba(236,126,35, 0.85);
}

.clear-box, .delete-box {
    background-color: rgba(236,126,35, 0.7);
    color: rgba(255, 255, 255, 0.85);
}

.equals-box {
    background-color: #ec7e23;
    color: rgba(255, 255, 255, 0.85);  
}


/* .teste {
    width: 50px;
    height: 50px;
    background-color: red;
    animation-name: slideLeft;
    animation-duration: 1s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

@keyframes slideLeft {
    
    0% {
        transform: scale(1);
    }

    50% {
        transform: scale(0.75);
    }

    100% {
        transform: scale(1);
    }
} */

